--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
      .practioners {
        font-style: italic;
      }
+     .small {
+       font-size: 25px;
+     }
      #main {
        margin: 0 auto;
        width: 50%;
@@ -51,6 +54,7 @@
       St Heliers<br>
       Auckland <br>
       New Zealand <br>
+      <i><span class="small">Please park on the street</span></i><br>
       <br>
       <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3192.5688639812997!2d174.8571102153206!3d-36.85280027993779!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6d0d4a02df0a2cad%3A0x60039d7d879444fa!2s2%2F70+St+Heliers+Bay+Rd%2C+St+Heliers%2C+Auckland+1071!5e0!3m2!1sen!2snz!4v1447320801687" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
   </body>
