Add raygun test

--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
   <head>
     <title>Connect Health</title>
     <link href='https://fonts.googleapis.com/css?family=Roboto:400,100,100italic' rel='stylesheet' type='text/css'>
+    <script type="text/javascript">
+    !function(a,b,c,d,e,f,g){a.RaygunObject=e,a[e]=a[e]||function(){
+    (a[e].o=a[e].o||[]).push(arguments)},f=b.createElement(c),g=b.getElementsByTagName(c)[0],
+    f.async=1,f.src=d,g.parentNode.insertBefore(f,g)}(window,document,"script","//cdn.raygun.io/raygun4js/raygun.min.js","rg4js");
+    </script>
     <style>
      * {
        font-family: 'Roboto', Verdana, Tahoma, Arial, Helvetica, sans-serif;
@@ -57,6 +62,12 @@
       <i><span class="small">Please park on the street</span></i><br>
       <br>
       <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3192.5688639812997!2d174.8571102153206!3d-36.85280027993779!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6d0d4a02df0a2cad%3A0x60039d7d879444fa!2s2%2F70+St+Heliers+Bay+Rd%2C+St+Heliers%2C+Auckland+1071!5e0!3m2!1sen!2snz!4v1447320801687" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+
+      <script type="text/javascript">
+  rg4js('apiKey', '61GdN7lvir/3lb5i7RGisw==');
+    rg4js('enablePulse', true);
+      rg4js('enableCrashReporting', false);
+      </script>
   </body>
 </html>
 
