--- a/index.html
+++ b/index.html
@@ -2,6 +2,17 @@
   <head>
     <title>Connect Health</title>
     <link href='https://fonts.googleapis.com/css?family=Roboto:400,100,100italic' rel='stylesheet' type='text/css'>
+
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+    
+      ga('create', 'UA-74179624-1', 'auto');
+      ga('send', 'pageview');
+    </script>
+
     <script type="text/javascript">
     !function(a,b,c,d,e,f,g){a.RaygunObject=e,a[e]=a[e]||function(){
     (a[e].o=a[e].o||[]).push(arguments)},f=b.createElement(c),g=b.getElementsByTagName(c)[0],
