Update phone number while offline.

--- a/index.html
+++ b/index.html
@@ -60,11 +60,12 @@
     <div id="main">
       <div class="practioners">
         Eleanor Bekesi<br>
-        Celia Buckwell<br>
-        Taylor Eastwood<br>
+        Amy Buell<br>
+        Debra Hawley<br>
       </div>
       <br>
-      09 579 2432<br>
+      <s>09 579 2432</s><br>
+      027 275 0884 (tempoary)≤br>
       <br>
       2/70 St Heliers Bay Rd<br>
       St Heliers<br>
