--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       </div>
       <br>
       <s>09 579 2432</s><br>
-      027 275 0884 (tempoary)≤br>
+      027 275 0884 (temporary)</br>
       <br>
       2/70 St Heliers Bay Rd<br>
       St Heliers<br>
